# mbd-vv

./: .cafignore  .exrc  .gitignore  .gitmodules  Pipfile  README.md  caf.ini  calc.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
data/: solids.csv
mbdvv/: __init__.py  aimsparse.py  app.py  calcs.py  functasks.py  layered.py  mbd.py  mbdvv.py  physics.py  report.py  utils.py  xc.py
mbdvv/data/: C6-data.h5  atoms.csv  bjorkman-prb-12.csv  layered.csv  solids.csv  vdw-surf.csv
mbdvv/data/layered_geoms/: bn.vasp  graphite.vasp  hfs2.vasp  hfse2.vasp  hfte2.vasp  mos2.vasp  mose2.vasp  mote2.vasp  nbse2.vasp  nbte2.vasp  pbo.vasp  pdte2.vasp  pts2.vasp  ptse2.vasp  tas2.vasp  tase2.vasp  tis2.vasp  tise2.vasp  tite2.vasp  vs2.vasp  vse2.vasp  ws2.vasp  wse2.vasp  zrs2.vasp  zrse2.vasp  zrte2.vasp
notebooks/: 2017-10-20-atomic-densities.ipynb  2017-10-20-atomic-densities.py  2018-01-24-datasets.ipynb  2018-01-24-datasets.py  2018-02-09-atomic-volumes.ipynb  2018-02-09-atomic-volumes.py  2018-02-12-alpha-density.ipynb  2018-02-12-alpha-density.py  atoms.ipynb  atoms.py  datasets.py  layered.ipynb
patches/: aims-00b3aa6.patch  aims-138e95e.patch  aims-661b2f1.patch  aims-7077a22.patch  aims-c68bd2f.patch  aims-c9fe4b2.patch  aims-e7c3eb6.patch  aims-fbf4c4a.patch  aims.master.patch
pub/: .chktexrc  .exrc  .gitignore  .utf8-8.add  Makefile  abstract.tex  export-figures.tex  metadata.yml  packages.tex  preamble.tex  preamble.tex.in  preprint.tex  preprint.tex.in  refs-zotero.bib  si.tex  si.tex.in  texgen.py  text.tex
report/: report.py
reports/: 2018-09-16-report.py  current-report.py
results/: s12l-energies.csv  s12l-raw-energies.csv  s66-energies.csv  s66-raw-energies.csv  s66-vdw-params.csv  solids-energies.csv  solids-raw-energies.csv  solids-subsums.csv  solids-vdw-params.csv  solids-vv-atom-pols.csv  x23-raw-energies.csv  x23-vdw-params.csv
scripts/: figs.py
utils/: dotenv
