[tool.poetry]
name = "mbdvv"
version = "0.1.1"
description = ""
authors = ["Jan Hermann <sci@janhermann.cz>"]

[tool.poetry.dependencies]
python = "^3.6"
caf = { path = "_caf", develop = true }
vdwsets = { path = "_vdwsets", develop = true }
pymbd = { git = "https://github.com/azag0/libmbd.git", tag = "pub-mbd-vv" }
pandas = "^0.23.4"
numpy = "^1.15"
tables = "^3.4"

[tool.poetry.dev-dependencies]
pyatsol = { path = "vendor/pyatsol", develop = true }
knitj = { git = "https://github.com/azag0/knitj.git", commit = "dbc35757a363fba0c2f3dfcba27f730b7f27c420" }
scipy = "^1.1"
tqdm = "^4.25"
matplotlib = "^2.2"
mypy = "^0.620.0"
ipykernel = "^4.9"
lxml = "^4.2"
flake8 = "^3.5"
jinja2 = "^2.10"
pyyaml = "^3.13"
seaborn = "^0.9"
tornado = "<5"
