[tool.poetry]
name = "mbdvv"
version = "0.1.1"
description = ""
authors = ["Jan Hermann <sci@janhermann.cz>"]

[tool.poetry.dependencies]
python = "^3.6"
caf = { path = "vendor/caf", develop = true }
vdwsets = { path = "vendor/vdwsets", develop = true }
pymbd = { git = "https://github.com/jhrmnn/libmbd.git", tag = "pub-mbd-vv" }
pandas = "^0.23.4"
numpy = "^1.15"
tables = "^3.4"
scipy = "^1.1"

[tool.poetry.dev-dependencies]
pyatsol = { path = "vendor/pyatsol", develop = true }
knitj = { git = "https://github.com/jhrmnn/knitj.git", tag = "pub-mbd-vv" }
tqdm = "^4.25"
matplotlib = "^2.2"
mypy = "^0.620.0"
ipykernel = "^4.9"
lxml = "^4.2"
flake8 = "^3.5"
jinja2 = "^2.10"
pyyaml = "^3.13"
seaborn = "^0.9"
tornado = "<5"
xarray = "^0.11.3"
isort = "^4.3"
ipywidgets = "^7.4"
nbstripout = "^0.3.5"
